--- a/public/assets/css/vertical-layout-light/index.css
+++ b/public/assets/css/vertical-layout-light/index.css
@@ -100,41 +100,179 @@ nav .sk-ml-5 {
   padding: 15px;
 }
 
-.slider_container {
-  position: relative;
-  height: 100%;
+@-webkit-keyframes slideIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes slideIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@-webkit-keyframes slideOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+@keyframes slideOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+/* PERSONAL CSS */
+.title {
+  font-size: 3rem;
+  color: white !important;
+  margin: 0 !important;
+}
+
+.subtitle {
+  font-size: 1rem;
+  color: white !important;
+  margin: 15px 0 25px !important;
+  font-weight: normal;
+}
+
+.sliderCta {
+  padding: 10px 25px;
+  background-color: #4ca74c;
+  text-decoration: none;
+  color: white;
+}
+
+#myContainer {
+  height: 100px;
+}
+
+#slider {
   overflow: hidden;
-}
-
-.slider {
-  display: inline-flex;
-  transition: 0.9s;
-}
-.slider img {
+  position: relative;
   width: 100%;
-  background-size: 100% 100%;
+  height: 100%;
+}
+
+.singleSlide {
+  background-size: cover;
   background-position: center;
-}
-
-.indicator {
+  height: 100%;
   position: absolute;
-  display: inline-flex;
-  cursor: pointer;
-  left: 45%;
-  bottom: 20%;
+  left: 0;
+  width: 100%;
+  top: 0px;
+  opacity: 0;
 }
 
-.dots {
-  background-color: #fff;
-  height: 15px;
-  width: 15px;
-  border-radius: 50%;
-  transition: 0.8s;
-  margin-left: 8px;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+.slideOverlay {
+  background-color: rgba(0, 0, 0, 0.01);
+  padding: 0 100px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
 }
-.dots:hover {
-  background-color: #549491;
+
+.sliderNav {
+  position: absolute !important;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  z-index: 2;
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  background: transparent;
+  text-indent: -9999px;
+  border-top: 2px solid black;
+  border-left: 2px solid black;
+  transition: all 250ms ease-in-out;
+  text-decoration: none;
+  color: transparent;
+}
+.sliderNav:hover {
+  cursor: pointer;
+}
+
+#sliderPrev {
+  transform: rotate(-45deg);
+  left: 25px;
+}
+#sliderPrev img {
+  width: 32px;
+}
+
+#sliderNext {
+  right: 25px;
+  transform: rotate(135deg);
+}
+#sliderNext img {
+  width: 32px;
+}
+
+#dots {
+  position: absolute;
+  bottom: 0px;
+  margin: auto;
+  left: 0;
+  right: 0;
+  z-index: 2;
+  color: white;
+  display: flex;
+  justify-content: center;
+}
+
+.dot {
+  margin: 12px;
+  background-color: white;
+  height: 12px;
+  width: 12px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.slideIn {
+  -webkit-animation: slideIn 0.3s forwards linear;
+  animation: slideIn 0.3s forwards linear;
+}
+
+.slideOut {
+  -webkit-animation: slideOut 0.3s forwards linear;
+  animation: slideOut 0.3s forwards linear;
+}
+
+body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  font-family: "Montserrat";
+}
+
+html {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  font-family: "Montserrat";
+}
+
+#mySlider {
+  height: 60%;
+  position: absolute;
+  right: 0;
+  left: 0;
 }
 
 * {
