--- a/public/assets/css/vertical-layout-light/index.css
+++ b/public/assets/css/vertical-layout-light/index.css
@@ -275,6 +275,314 @@ html {
   left: 0;
 }
 
+.container-category {
+  position: relative;
+  top: 416px;
+  padding: 15px;
+}
+.container-category .sk-span-detail {
+  font-weight: 400;
+  font-size: 19px;
+  color: #1C1D1F;
+  margin-top: 1.5px;
+}
+.container-category ul {
+  display: flex;
+  list-style: none;
+  margin-top: 9px;
+}
+.container-category ul li {
+  margin-right: 20px;
+}
+.container-category ul li a {
+  text-decoration: none;
+  color: #000;
+}
+.container-category #detailCatalogByCategory {
+  margin-top: 14px;
+  border: #000 1px solid;
+  padding: 0px 0px 0px 33px;
+}
+.container-category #detailCatalogByCategory h2 {
+  font-size: 24px;
+  font-weight: 400;
+  color: #1C1D1F;
+  margin-top: 31px;
+  margin-bottom: 5px;
+  letter-spacing: 0.2px;
+}
+.container-category #detailCatalogByCategory p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  color: #1C1D1F;
+  line-height: 22px;
+}
+.container-category #detailCatalogByCategory .sk-btn-bahasaarab {
+  margin-top: 24px;
+}
+.container-category #detailCatalogByCategory .sk-container-flex {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 10px;
+}
+.container-category #detailCatalogByCategory .sk-container-flex .sk-card {
+  padding: 10px;
+  max-width: 232px;
+}
+.container-category #detailCatalogByCategory .sk-container-flex .sk-card .sk-title-subcard {
+  font-weight: 400;
+  font-size: 16px;
+  color: #1C1D1F;
+  margin-top: 1.5px;
+  letter-spacing: 0.2px;
+  line-height: 19.2px;
+  font-style: bold;
+}
+.container-category #detailCatalogByCategory .sk-container-flex .sk-card .sk-subtitle-subcard {
+  font-weight: 400;
+  font-size: 12px;
+  color: #1C1D1F;
+  margin-top: 1.5px;
+  letter-spacing: 0.2px;
+  line-height: 16.8px;
+}
+.container-category #detailCatalogByCategory .sk-container-flex .sk-card .sk-subtitle-subcard-gray {
+  font-weight: 400;
+  font-size: 12px;
+  color: #6A6F73;
+  margin-top: 1.5px;
+  letter-spacing: 0.2px;
+  line-height: 17px;
+}
+
+#containCategory {
+  position: relative;
+  top: 430px;
+  padding: 15px;
+}
+#containCategory .contain-grid-category {
+  margin-top: 20px;
+  display: grid;
+  align-content: center;
+  justify-content: space-around;
+  align-items: center;
+  justify-items: center;
+  grid-template-columns: auto auto auto auto;
+}
+#containCategory .contain-grid-category .grid-item {
+  width: 200px;
+  height: 200px;
+  background-color: #F7F9FA;
+  margin-bottom: 20px;
+  padding: 20px 20px 20px 20px;
+}
+#containCategory .contain-grid-category .grid-image1 {
+  width: 100px;
+  height: 100px;
+  background: url("https://img.icons8.com/external-others-bzzricon-studio/100/000000/external-quran-ramadan-others-bzzricon-studio-2.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  -o-object-fit: contain;
+     object-fit: contain;
+  margin: 30px auto;
+}
+#containCategory .contain-grid-category .grid-image2 {
+  width: 100px;
+  height: 100px;
+  background: url("/public/assets/images/bahasa-arab.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  -o-object-fit: contain;
+     object-fit: contain;
+  margin: 30px auto;
+}
+#containCategory .contain-grid-category .grid-image3 {
+  width: 100px;
+  height: 100px;
+  background: url("/public/assets/images/marketing.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  -o-object-fit: contain;
+     object-fit: contain;
+  margin: 30px auto;
+}
+#containCategory .contain-grid-category .grid-image4 {
+  width: 100px;
+  height: 100px;
+  background: url("/public/assets/images/desian-it.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  -o-object-fit: contain;
+     object-fit: contain;
+  margin: 30px auto;
+}
+#containCategory .contain-grid-category .grid-image5 {
+  width: 100px;
+  height: 100px;
+  background: url("/public/assets/images/dinniyah.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  -o-object-fit: contain;
+     object-fit: contain;
+  margin: 30px auto;
+}
+#containCategory .contain-grid-category .grid-image6 {
+  width: 100px;
+  height: 100px;
+  background: url("/public/assets/images/manajement.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  -o-object-fit: contain;
+     object-fit: contain;
+  margin: 30px auto;
+}
+#containCategory .contain-grid-category .grid-image7 {
+  width: 100px;
+  height: 100px;
+  background: url("/public/assets/images/parenting.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  -o-object-fit: contain;
+     object-fit: contain;
+  margin: 30px auto;
+}
+#containCategory .contain-grid-category .grid-image8 {
+  width: 100px;
+  height: 100px;
+  background: url("/public/assets/images/pengembangan.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  -o-object-fit: contain;
+     object-fit: contain;
+  margin: 30px auto;
+}
+
+#containByTopic {
+  position: relative;
+  top: 530px;
+  padding: 15px;
+  background: #F7F9FA;
+}
+#containByTopic h2 {
+  margin-top: 57px;
+}
+#containByTopic .table {
+  display: table;
+  width: 100%;
+  background: #F7F9FA;
+  margin-top: 24px;
+}
+#containByTopic .table .table-row {
+  display: table-row;
+  background: #F7F9FA;
+}
+#containByTopic .table .table-row .table-cell {
+  display: table-cell;
+  padding: 10px;
+  background: #F7F9FA;
+}
+#containByTopic .table .table-row .table-cell .table-cell-image {
+  width: 100px;
+  height: 100px;
+  background: url("https://img.icons8.com/external-others-bzzricon-studio/100/000000/external-quran-ramadan-others-bzzricon-studio-2.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  -o-object-fit: contain;
+     object-fit: contain;
+  margin: 30px auto;
+}
+#containByTopic .table .table-row .table-cell .table-cell-title {
+  font-weight: 400;
+  background: #F7F9FA;
+  font-size: 16px;
+  color: #1C1D1F;
+  margin-top: 1.5px;
+  letter-spacing: 0.2px;
+  line-height: 19.2px;
+  font-style: bold;
+}
+#containByTopic .table .table-row .table-cell .table-cell-subtitle {
+  font-weight: 400;
+  font-size: 12px;
+  background: #F7F9FA;
+  color: #5624D0;
+  margin-top: 1.5px;
+  letter-spacing: 0.2px;
+  line-height: 16.8px;
+}
+#containByTopic .table .table-row .table-cell .table-cell-subtitle-gray {
+  font-weight: 400;
+  background: #F7F9FA;
+  font-size: 12px;
+  color: #6A6F73;
+  margin-top: 1.5px;
+  letter-spacing: 0.2px;
+  line-height: 17px;
+}
+
+#containByOpening {
+  position: relative;
+  top: 580px;
+}
+#containByOpening .container-grid-opening {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  justify-content: space-around;
+  align-content: space-evenly;
+  align-items: center;
+  justify-items: stretch;
+}
+#containByOpening .container-grid-opening .grid-item1 {
+  width: 100%;
+  height: 300px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+#containByOpening .container-grid-opening .grid-item1 .image-opening {
+  width: 300px;
+  height: 300px;
+  background: url("/public/assets/images/ahmad.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+#containByOpening .container-grid-opening .grid-item3 {
+  width: 100%;
+  height: 300px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+#containByOpening .container-grid-opening .grid-item3 .image-opening {
+  width: 300px;
+  height: 300px;
+  background: url("/public/assets/images/aulia.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+#containByOpening .container-grid-opening .grid-item2 {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
 * {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
@@ -282,6 +590,36 @@ html {
   padding: 0;
   box-sizing: border-box;
   background-color: #FFFFFF;
+}
+
+h1 {
+  font-size: 32px;
+  font-weight: 700;
+  letter-spacing: 0.5px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+h2 {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 28.8px;
+  letter-spacing: 0.2px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  background: #F7F9FA;
+  color: #1C1D1F;
+}
+
+.sk-btn {
+  max-width: 230px;
+  padding: 4px 20px;
+}
+
+.sk-btn-border {
+  border: 1px solid #000;
 }
 
 body {
