--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -146,3 +146,306 @@ html {
 	right: 0;
 	left: 0;
 }
+
+.container-category{
+	position: relative;
+    top: 416px;
+    padding: 15px;
+
+	.sk-span-detail {
+		font-weight: 400;
+		font-size: 19px;
+		color: #1C1D1F;
+		margin-top: 1.5px;
+	}
+	ul{
+        display: flex;
+        list-style: none;
+		margin-top: 9px;
+        li{
+            margin-right: 20px;
+            a{
+                text-decoration: none;
+                color: #000;
+            }
+		}
+	}
+
+	#detailCatalogByCategory{
+		margin-top: 14px;
+		border: #000 1px solid;
+		padding: 0px 0px 0px 33px;
+		h2{
+			font-size: 24px;
+			font-weight: 400;
+			color: #1C1D1F;
+			margin-top: 31px;
+			margin-bottom: 5px;
+			letter-spacing: .2px;
+		}
+		p{
+			font-style: normal;
+			font-weight: 400;
+			font-size: 16px;
+			color: #1C1D1F;
+			line-height: 22px;
+		}
+		.sk-btn-bahasaarab{
+			margin-top: 24px;
+		}
+		.sk-container-flex{
+			display: flex;
+			justify-content: space-around;
+			margin-top: 10px;
+			.sk-card{
+				padding: 10px;
+				max-width: 232px;
+				.sk-title-subcard{
+					font-weight: 400;
+					font-size: 16px;
+					color: #1C1D1F;
+					margin-top: 1.5px;
+					letter-spacing: .2px;
+					line-height: 19.2px;
+					font-style: bold;
+				}
+				.sk-subtitle-subcard{
+					font-weight: 400;
+					font-size: 12px;
+					color: #1C1D1F;
+					margin-top: 1.5px;
+					letter-spacing: .2px;
+					line-height: 16.8px;
+				}
+				.sk-subtitle-subcard-gray{
+					font-weight: 400;
+					font-size: 12px;
+					color: #6A6F73;
+					margin-top: 1.5px;
+					letter-spacing: .2px;
+					line-height: 17px;
+				}
+	
+			}
+		}
+		
+	}
+}
+
+#containCategory{
+	position: relative;
+    top: 430px;
+    padding: 15px;
+	.contain-grid-category{
+		margin-top: 20px;
+		display: grid;
+    	align-content: center;
+    	justify-content: space-around;
+    	align-items: center;
+    	justify-items: center;
+    	grid-template-columns: auto auto auto auto;
+
+		.grid-item{
+			width: 200px;
+			height: 200px;
+			background-color: #F7F9FA;
+			margin-bottom: 20px;
+			padding: 20px 20px 20px 20px;
+		}
+		.grid-image1{
+			width: 100px;
+			height: 100px;
+			background: url('https://img.icons8.com/external-others-bzzricon-studio/100/000000/external-quran-ramadan-others-bzzricon-studio-2.png');
+			background-size: cover;
+			background-repeat: no-repeat;
+			background-position: center center;
+			object-fit: contain;
+			margin: 30px auto;
+		}
+		.grid-image2{
+			width: 100px;
+			height: 100px;
+			background: url('/public/assets/images/bahasa-arab.png');
+			background-size: cover;
+			background-repeat: no-repeat;
+			background-position: center center;
+			object-fit: contain;
+			margin: 30px auto;
+		}
+		.grid-image3{
+			width: 100px;
+			height: 100px;
+			background: url('/public/assets/images/marketing.png');
+			background-size: cover;
+			background-repeat: no-repeat;
+			background-position: center center;
+			object-fit: contain;
+			margin: 30px auto;
+		}
+		.grid-image4{
+			width: 100px;
+			height: 100px;
+			background: url('/public/assets/images/desian-it.png');
+			background-size: cover;
+			background-repeat: no-repeat;
+			background-position: center center;
+			object-fit: contain;
+			margin: 30px auto;
+		}
+		.grid-image5{
+			width: 100px;
+			height: 100px;
+			background: url('/public/assets/images/dinniyah.png');
+			background-size: cover;
+			background-repeat: no-repeat;
+			background-position: center center;
+			object-fit: contain;
+			margin: 30px auto;
+		}
+		.grid-image6{
+			width: 100px;
+			height: 100px;
+			background: url('/public/assets/images/manajement.png');
+			background-size: cover;
+			background-repeat: no-repeat;
+			background-position: center center;
+			object-fit: contain;
+			margin: 30px auto;
+		}
+		.grid-image7{
+			width: 100px;
+			height: 100px;
+			background: url('/public/assets/images/parenting.png');
+			background-size: cover;
+			background-repeat: no-repeat;
+			background-position: center center;
+			object-fit: contain;
+			margin: 30px auto;
+		}
+		.grid-image8{
+			width: 100px;
+			height: 100px;
+			background: url('/public/assets/images/pengembangan.png');
+			background-size: cover;
+			background-repeat: no-repeat;
+			background-position: center center;
+			object-fit: contain;
+			margin: 30px auto;
+		}
+	}
+}
+
+#containByTopic{
+	position: relative;
+    top: 530px;
+    padding: 15px;
+	background: #F7F9FA;
+	h2{
+		margin-top: 57px;
+	}
+
+	.table{
+		display: table;
+		width: 100%;
+		background: #F7F9FA;
+		margin-top: 24px;
+		.table-row{
+			display: table-row;
+			background: #F7F9FA;
+			.table-cell{
+				display: table-cell;
+				padding: 10px;
+				background: #F7F9FA;
+				.table-cell-image{
+					width: 100px;
+					height: 100px;
+					background: url('https://img.icons8.com/external-others-bzzricon-studio/100/000000/external-quran-ramadan-others-bzzricon-studio-2.png');
+					background-size: cover;
+					background-repeat: no-repeat;
+					background-position: center center;
+					object-fit: contain;
+					margin: 30px auto;
+				}
+				.table-cell-title{
+					font-weight: 400;
+					background: #F7F9FA;
+					font-size: 16px;
+					color: #1C1D1F;
+					margin-top: 1.5px;
+					letter-spacing: .2px;
+					line-height: 19.2px;
+					font-style: bold;
+				}
+				.table-cell-subtitle{
+					font-weight: 400;
+					font-size: 12px;
+					background: #F7F9FA;
+					color: #5624D0;
+					margin-top: 1.5px;
+					letter-spacing: .2px;
+					line-height: 16.8px;
+				}
+				.table-cell-subtitle-gray{
+					font-weight: 400;
+					background: #F7F9FA;
+					font-size: 12px;
+					color: #6A6F73;
+					margin-top: 1.5px;
+					letter-spacing: .2px;
+					line-height: 17px;
+				}
+			}
+		}
+	}
+}
+
+#containByOpening{
+	position: relative;
+    top: 580px;
+	.container-grid-opening{
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		justify-content: space-around;
+		align-content: space-evenly;
+		align-items: center;
+		justify-items: stretch;
+		.grid-item1{
+			width: 100%;
+			height: 300px;
+			display: flex;
+			justify-content: flex-end;
+			align-items: center;
+			.image-opening{
+				width: 300px;
+				height: 300px;
+				background: url('/public/assets/images/ahmad.png');
+				background-size: contain;
+				background-repeat: no-repeat;
+				background-position: center center;
+				object-fit: contain;
+			}
+		}
+		.grid-item3{
+			width: 100%;
+			height: 300px;
+			display: flex;
+			justify-content: flex-start;
+			align-items: center;
+			.image-opening{
+				width: 300px;
+				height: 300px;
+				background: url('/public/assets/images/aulia.png');
+				background-size: contain;
+				background-repeat: no-repeat;
+				background-position: center center;
+				object-fit: contain;
+			}
+		}
+		.grid-item2{
+			width: 100%;
+			display: flex;
+			justify-content: space-around;
+			align-items: center;
+		}
+	}
+}
