--- a/scss/index.scss
+++ b/scss/index.scss
@@ -36,6 +36,28 @@ h2{
     border: 1px solid #000;
 }
 
+.sk-mt-5{
+    margin-top: 5px;
+}
+.sk-mt-10{
+    margin-top: 10px;
+}
+.sk-mt-14{
+    margin-top: 14px;
+}
+.sk-mt-16{
+    margin-top: 16px;
+}
+.sk-mt-20{
+    margin-top: 20px;
+}
+.sk-mt-24{
+    margin-top: 24px;
+}
+.sk-mt-45{
+    margin-top: 45px;
+}
+
 body{
     max-width: 100%;
 }
