--- a/public/assets/css/vertical-layout-light/index.css
+++ b/public/assets/css/vertical-layout-light/index.css
@@ -559,6 +559,23 @@ html {
   -o-object-fit: contain;
      object-fit: contain;
 }
+#containByOpening .container-grid-opening .grid-item4 {
+  width: 100%;
+  height: 300px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+#containByOpening .container-grid-opening .grid-item4 .image-opening {
+  width: 300px;
+  height: 300px;
+  background: url("/public/assets/images/vektor-roadmap.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
 #containByOpening .container-grid-opening .grid-item3 {
   width: 100%;
   height: 300px;
@@ -581,6 +598,69 @@ html {
   display: flex;
   justify-content: space-around;
   align-items: center;
+}
+
+#containByFooter {
+  position: relative;
+  top: 580px;
+  background-color: #1C1D1F;
+  width: 100%;
+  padding-top: 15px;
+}
+#containByFooter .table {
+  display: table;
+  width: 100%;
+  background-color: #1C1D1F;
+  margin-top: 30px;
+  margin-left: 48px;
+}
+#containByFooter .table .table-row {
+  display: table-row;
+  background-color: #1C1D1F;
+}
+#containByFooter .table .table-row .table-cell {
+  display: table-cell;
+  padding: 10px;
+  background: #1C1D1F;
+}
+#containByFooter .table .table-row .table-cell .table-cell-image {
+  width: 100px;
+  height: 100px;
+  background: url("https://img.icons8.com/external-others-bzzricon-studio/100/000000/external-quran-ramadan-others-bzzricon-studio-2.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  -o-object-fit: contain;
+     object-fit: contain;
+  margin: 30px auto;
+}
+#containByFooter .table .table-row .table-cell .table-cell-title {
+  font-weight: 400;
+  color: white;
+  font-size: 16px;
+  background-color: #1C1D1F;
+  margin-top: 1.5px;
+  letter-spacing: 0.2px;
+  line-height: 19.2px;
+  font-style: bold;
+}
+#containByFooter .table .table-row .table-cell .table-cell-subtitle {
+  font-weight: 400;
+  font-size: 12px;
+  background: #F7F9FA;
+  color: #5624D0;
+  margin-top: 1.5px;
+  letter-spacing: 0.2px;
+  line-height: 16.8px;
+}
+#containByFooter .table .table-row .table-cell .table-cell-subtitle-gray {
+  font-weight: 400;
+  background: #F7F9FA;
+  font-size: 12px;
+  color: #6A6F73;
+  margin-top: 1.5px;
+  letter-spacing: 0.2px;
+  line-height: 17px;
 }
 
 * {
@@ -620,6 +700,34 @@ h2 {
 
 .sk-btn-border {
   border: 1px solid #000;
+}
+
+.sk-mt-5 {
+  margin-top: 5px;
+}
+
+.sk-mt-10 {
+  margin-top: 10px;
+}
+
+.sk-mt-14 {
+  margin-top: 14px;
+}
+
+.sk-mt-16 {
+  margin-top: 16px;
+}
+
+.sk-mt-20 {
+  margin-top: 20px;
+}
+
+.sk-mt-24 {
+  margin-top: 24px;
+}
+
+.sk-mt-45 {
+  margin-top: 45px;
 }
 
 body {
