--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -425,6 +425,22 @@ html {
 				object-fit: contain;
 			}
 		}
+		.grid-item4{
+			width: 100%;
+			height: 300px;
+			display: flex;
+			justify-content: flex-end;
+			align-items: center;
+			.image-opening{
+				width: 300px;
+				height: 300px;
+				background: url('/public/assets/images/vektor-roadmap.png');
+				background-size: contain;
+				background-repeat: no-repeat;
+				background-position: center center;
+				object-fit: contain;
+			}
+		}
 		.grid-item3{
 			width: 100%;
 			height: 300px;
@@ -449,3 +465,67 @@ html {
 		}
 	}
 }
+
+#containByFooter{
+	position: relative;
+    top: 580px;
+	background-color: #1C1D1F;
+	width: 100%;
+	padding-top: 15px;
+	
+	.table{
+		display: table;
+		width: 100%;
+		background-color: #1C1D1F;
+		margin-top: 30px;
+		margin-left: 48px;
+		.table-row{
+			display: table-row;
+			background-color: #1C1D1F;
+			.table-cell{
+				display: table-cell;
+				padding: 10px;
+				background: #1C1D1F;
+				.table-cell-image{
+					width: 100px;
+					height: 100px;
+					background: url('https://img.icons8.com/external-others-bzzricon-studio/100/000000/external-quran-ramadan-others-bzzricon-studio-2.png');
+					background-size: cover;
+					background-repeat: no-repeat;
+					background-position: center center;
+					object-fit: contain;
+					margin: 30px auto;
+				}
+				.table-cell-title{
+					font-weight: 400;
+					color: #ffff;
+					font-size: 16px;
+					background-color: #1C1D1F;
+					margin-top: 1.5px;
+					letter-spacing: .2px;
+					line-height: 19.2px;
+					font-style: bold;
+				}
+				.table-cell-subtitle{
+					font-weight: 400;
+					font-size: 12px;
+					background: #F7F9FA;
+					color: #5624D0;
+					margin-top: 1.5px;
+					letter-spacing: .2px;
+					line-height: 16.8px;
+				}
+				.table-cell-subtitle-gray{
+					font-weight: 400;
+					background: #F7F9FA;
+					font-size: 12px;
+					color: #6A6F73;
+					margin-top: 1.5px;
+					letter-spacing: .2px;
+					line-height: 17px;
+				}
+			}
+		}
+	}
+}
+
