--- a/scss/index.scss
+++ b/scss/index.scss
@@ -41,6 +41,20 @@ h2{
     border: 1px solid #000;
 }
 
+.sk-btn-purple{
+    background-color: #A435F0;
+    color: #FFFFFF;
+    width: 292px;
+    height: 48px;
+    border-radius: 4px;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19.2px;
+    letter-spacing: .2px;
+    text-align: center;
+    text-transform: uppercase;
+    font-style: normal;
+}
 .sk-mt-5{
     margin-top: 5px;
 }
@@ -61,6 +75,9 @@ h2{
 }
 .sk-mt-45{
     margin-top: 45px;
+}
+.sk-mt-70{
+    margin-top: 70px;
 }
 .sk-ml-176{
     margin-left: 176px;
