--- a/public/assets/css/vertical-layout-light/index.css
+++ b/public/assets/css/vertical-layout-light/index.css
@@ -726,7 +726,7 @@ html {
   width: 700px;
   height: 48px;
   position: relative;
-  top: -33px;
+  top: -317px;
   left: 176px;
   padding: 6px;
   border: #F5F5F5 1px solid;
@@ -754,22 +754,91 @@ html {
   color: #000;
 }
 #modulViewMenu .container-grid-opening .sk-card-videos-views {
-  padding: 5px;
-  max-width: 350px;
+  max-width: 340px;
   background-color: #fff;
+  position: relative;
+  top: -317px;
+  left: 259px;
 }
 #modulViewMenu .container-grid-opening .sk-card-videos-views .sk-thumbnail {
   width: 340px;
   height: 191px;
-  background: black;
+  background: rgb(218, 5, 5);
 }
 #modulViewMenu .container-grid-opening .sk-card-videos-views .sk-flex-column {
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
   justify-content: space-between;
-  align-items: stretch;
+  align-items: center;
   align-content: space-between;
+}
+#modulViewMenu .container-grid-opening .sk-card-videos-views .sk-detail-card-video {
+  list-style: none;
+}
+#modulViewMenu .container-grid-opening .sk-card-videos-views .sk-detail-card-video .grid-item {
+  display: flex;
+  flex-direction: row;
+}
+#modulViewMenu .container-grid-opening .sk-card-videos-views .sk-detail-card-video .grid-item .sk-icon-video-24 {
+  width: 24px;
+  height: 24px;
+  background: url("/public/assets/icons/icon-video.png");
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-position: center center;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+#modulViewMenu .container-grid-opening .sk-card-videos-views .sk-detail-card-video .grid-item .sk-icon-file-24 {
+  width: 24px;
+  height: 24px;
+  background: url("/public/assets/icons/icon-file.png");
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-position: center center;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+#modulViewMenu .container-grid-opening .sk-card-videos-views .sk-detail-card-video .grid-item .sk-icon-folder-download-24 {
+  width: 24px;
+  height: 24px;
+  background: url("/public/assets/icons/icon-folde-download.png");
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-position: center center;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+#modulViewMenu .container-grid-opening .sk-card-videos-views .sk-detail-card-video .grid-item .sk-icon-infinate-24 {
+  width: 24px;
+  height: 24px;
+  background: url("/public/assets/icons/icon-invinate.png");
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-position: center center;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+#modulViewMenu .container-grid-opening .sk-card-videos-views .sk-detail-card-video .grid-item .sk-icon-square-24 {
+  width: 24px;
+  height: 24px;
+  background: url("/public/assets/icons/icon-square.png");
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-position: center center;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+#modulViewMenu .container-grid-opening .sk-card-videos-views .sk-detail-card-video .grid-item .sk-icon-sertifikat-24 {
+  width: 24px;
+  height: 24px;
+  background: url("/public/assets/icons/icon-sertifikat.png");
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-position: center center;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 * {
@@ -815,6 +884,21 @@ h2 {
   border: 1px solid #000;
 }
 
+.sk-btn-purple {
+  background-color: #A435F0;
+  color: #FFFFFF;
+  width: 292px;
+  height: 48px;
+  border-radius: 4px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 19.2px;
+  letter-spacing: 0.2px;
+  text-align: center;
+  text-transform: uppercase;
+  font-style: normal;
+}
+
 .sk-mt-5 {
   margin-top: 5px;
 }
@@ -841,6 +925,10 @@ h2 {
 
 .sk-mt-45 {
   margin-top: 45px;
+}
+
+.sk-mt-70 {
+  margin-top: 70px;
 }
 
 .sk-ml-176 {
